// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MitochondrialTranscriptCoverageTrack with dataset gnomad_cnv_r4 queries with proper parameters 1`] = `
<mockConstructor
  errorMessage="Unable to load coverage"
  loadingMessage="Loading coverage"
  loadingPlaceholderHeight={220}
  operationName="MitochondrialCoverageInTranscript"
  query="
query MitochondrialCoverageInTranscript($transcriptId: String!, $datasetId: DatasetId!, $referenceGenome: ReferenceGenomeId!) {
  transcript(transcript_id: $transcriptId, reference_genome: $referenceGenome) {
    mitochondrial_coverage(dataset: $datasetId) {
      pos
      mean
      median
      over_100
      over_1000
    }
  }
}
"
  success={[Function]}
  variables={
    {
      "datasetId": "gnomad_cnv_r4",
      "referenceGenome": "GRCh38",
      "transcriptId": "dummy-transcript",
    }
  }
>
  [Function]
</mockConstructor>
`;

exports[`MitochondrialTranscriptCoverageTrack with dataset gnomad_r4 queries with proper parameters 1`] = `
<mockConstructor
  errorMessage="Unable to load coverage"
  loadingMessage="Loading coverage"
  loadingPlaceholderHeight={220}
  operationName="MitochondrialCoverageInTranscript"
  query="
query MitochondrialCoverageInTranscript($transcriptId: String!, $datasetId: DatasetId!, $referenceGenome: ReferenceGenomeId!) {
  transcript(transcript_id: $transcriptId, reference_genome: $referenceGenome) {
    mitochondrial_coverage(dataset: $datasetId) {
      pos
      mean
      median
      over_100
      over_1000
    }
  }
}
"
  success={[Function]}
  variables={
    {
      "datasetId": "gnomad_r4",
      "referenceGenome": "GRCh38",
      "transcriptId": "dummy-transcript",
    }
  }
>
  [Function]
</mockConstructor>
`;

exports[`MitochondrialTranscriptCoverageTrack with dataset gnomad_sv_r4 queries with proper parameters 1`] = `
<mockConstructor
  errorMessage="Unable to load coverage"
  loadingMessage="Loading coverage"
  loadingPlaceholderHeight={220}
  operationName="MitochondrialCoverageInTranscript"
  query="
query MitochondrialCoverageInTranscript($transcriptId: String!, $datasetId: DatasetId!, $referenceGenome: ReferenceGenomeId!) {
  transcript(transcript_id: $transcriptId, reference_genome: $referenceGenome) {
    mitochondrial_coverage(dataset: $datasetId) {
      pos
      mean
      median
      over_100
      over_1000
    }
  }
}
"
  success={[Function]}
  variables={
    {
      "datasetId": "gnomad_sv_r4",
      "referenceGenome": "GRCh38",
      "transcriptId": "dummy-transcript",
    }
  }
>
  [Function]
</mockConstructor>
`;

exports[`MitochondrialTranscriptCoverageTrack with dataset ourdna has no unexpected changes 1`] = `
<div
  className="StatusMessage-sc-1sbph57-0 cveMMu"
>
  Mitochondrial genome coverage is not available in 
  OurDNA v1.0
</div>
`;
